{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 44,
  "lineage": "cebdb697-e08a-6182-775b-ec2a0fd3bc79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-086cae3329a3f7d75",
            "arn": "arn:aws:ec2:ap-northeast-2:029005680241:instance/i-0b44db26c1f2670df",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b44db26c1f2670df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03db9f28bccdcc77e",
            "private_dns": "ip-10-0-1-231.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.231",
            "public_dns": "ec2-3-38-180-195.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.180.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07cfdfdacda117771",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd2f86831033558a",
            "tags": {
              "Name": "test_terraform_ec2"
            },
            "tags_all": {
              "Name": "test_terraform_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04801ca837079ce4f"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.publicWebSecurityGroup",
            "aws_subnet.publicWebA",
            "aws_vpc.groomVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:029005680241:internet-gateway/igw-07f01067a34b8e664",
            "id": "igw-07f01067a34b8e664",
            "owner_id": "029005680241",
            "tags": {
              "Name": "Internet GW"
            },
            "tags_all": {
              "Name": "Internet GW"
            },
            "vpc_id": "vpc-032776568332d8c49"
          },
          "dependencies": [
            "aws_vpc.groomVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "appRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:029005680241:route-table/rtb-0f1e10e6b157e8710",
            "id": "rtb-0f1e10e6b157e8710",
            "owner_id": "029005680241",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "AppRouteTable"
            },
            "tags_all": {
              "Name": "AppRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-032776568332d8c49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.groomVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:029005680241:route-table/rtb-0c37ca7d97bd1b7c6",
            "id": "rtb-0c37ca7d97bd1b7c6",
            "owner_id": "029005680241",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f01067a34b8e664",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WebRouteTable"
            },
            "tags_all": {
              "Name": "WebRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-032776568332d8c49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internetGW",
            "aws_vpc.groomVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRouteAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a1642b3d1af885d",
            "route_table_id": "rtb-0f1e10e6b157e8710",
            "subnet_id": "subnet-0d2fa2133563cfd09"
          },
          "dependencies": [
            "aws_route_table.appRouteTable",
            "aws_subnet.privateAppA",
            "aws_vpc.groomVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRouteAssociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad81e1b7822034fd",
            "route_table_id": "rtb-0f1e10e6b157e8710",
            "subnet_id": "subnet-0f13b93e5196fa7ee"
          },
          "dependencies": [
            "aws_route_table.appRouteTable",
            "aws_subnet.privateAppC",
            "aws_vpc.groomVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRouteAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc53ccd5cbd8c428",
            "route_table_id": "rtb-0c37ca7d97bd1b7c6",
            "subnet_id": "subnet-0bd2f86831033558a"
          },
          "dependencies": [
            "aws_internet_gateway.internetGW",
            "aws_route_table.webRouteTable",
            "aws_subnet.publicWebA",
            "aws_vpc.groomVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRouteAssociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02df523b123500083",
            "route_table_id": "rtb-0c37ca7d97bd1b7c6",
            "subnet_id": "subnet-05953eaa3ee2174b5"
          },
          "dependencies": [
            "aws_internet_gateway.internetGW",
            "aws_route_table.webRouteTable",
            "aws_subnet.publicWebC",
            "aws_vpc.groomVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "appSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:029005680241:security-group/sg-0db32c27e6d54b950",
            "description": "appSecurityGroup",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              }
            ],
            "id": "sg-0db32c27e6d54b950",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              }
            ],
            "name": "appSecurityGroup",
            "name_prefix": "",
            "owner_id": "029005680241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "appSecurityGroup"
            },
            "tags_all": {
              "Name": "appSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-032776568332d8c49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.groomVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicWebSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:029005680241:security-group/sg-04801ca837079ce4f",
            "description": "Security group for public web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04801ca837079ce4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "publicWebSecurityGroup",
            "name_prefix": "",
            "owner_id": "029005680241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "publicWebSecurityGroup"
            },
            "tags_all": {
              "Name": "publicWebSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-032776568332d8c49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.groomVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DBSecurityGroupRulesRDSingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3787544304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0db32c27e6d54b950",
            "security_group_rule_id": "sgr-045be5cf73a3fad62",
            "self": false,
            "source_security_group_id": "sg-0db32c27e6d54b950",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.appSecurityGroup",
            "aws_vpc.groomVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DBSecurityGroupRulesegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-1572416964",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0db32c27e6d54b950",
            "security_group_rule_id": "sgr-0e7110c50debc8257",
            "self": false,
            "source_security_group_id": "sg-0db32c27e6d54b950",
            "timeouts": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.appSecurityGroup",
            "aws_vpc.groomVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "publicWebSecurityGroupRulesALLegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1266418570",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04801ca837079ce4f",
            "security_group_rule_id": "sgr-0cd124ed2903f0f1d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.publicWebSecurityGroup",
            "aws_vpc.groomVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "publicWebSecurityGroupRulesHTTPingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1527997270",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04801ca837079ce4f",
            "security_group_rule_id": "sgr-07bba8ce0351e1dc4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.publicWebSecurityGroup",
            "aws_vpc.groomVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "publicWebSecurityGroupRulesSSHingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3986243299",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04801ca837079ce4f",
            "security_group_rule_id": "sgr-0862c81e01099002b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.publicWebSecurityGroup",
            "aws_vpc.groomVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateAppA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:029005680241:subnet/subnet-0d2fa2133563cfd09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2fa2133563cfd09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029005680241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private App A"
            },
            "tags_all": {
              "Name": "Private App A"
            },
            "vpc_id": "vpc-032776568332d8c49"
          },
          "dependencies": [
            "aws_vpc.groomVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateAppC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:029005680241:subnet/subnet-0f13b93e5196fa7ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f13b93e5196fa7ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029005680241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private App c"
            },
            "tags_all": {
              "Name": "Private App c"
            },
            "vpc_id": "vpc-032776568332d8c49"
          },
          "dependencies": [
            "aws_vpc.groomVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicWebA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:029005680241:subnet/subnet-0bd2f86831033558a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd2f86831033558a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029005680241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Web A"
            },
            "tags_all": {
              "Name": "Public Web A"
            },
            "vpc_id": "vpc-032776568332d8c49"
          },
          "dependencies": [
            "aws_vpc.groomVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicWebC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:029005680241:subnet/subnet-05953eaa3ee2174b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05953eaa3ee2174b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029005680241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Web C"
            },
            "tags_all": {
              "Name": "Public Web C"
            },
            "vpc_id": "vpc-032776568332d8c49"
          },
          "dependencies": [
            "aws_vpc.groomVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "groomVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:029005680241:vpc/vpc-032776568332d8c49",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09545a68e665b05c9",
            "default_route_table_id": "rtb-0643846fb3ee94461",
            "default_security_group_id": "sg-0da362b6c7a85449f",
            "dhcp_options_id": "dopt-0bd8431d01e87dd1d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-032776568332d8c49",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0643846fb3ee94461",
            "owner_id": "029005680241",
            "tags": {
              "Name": "groomVPC"
            },
            "tags_all": {
              "Name": "groomVPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}